// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Search Donors Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              menu.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          חיפוש תורמים
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <table
        className="MuiTable-root-24"
        role={null}
      >
        <thead
          className="MuiTableHead-root-26"
          role={null}
        >
          <tr
            className="MuiTableRow-root-27 MuiTableRow-head-30"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              דוא״ל
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              סוג דם
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-44"
          role={null}
        >
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="DOH51a9KJ2VJBpZsSaFe72dHygr2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              Cxv
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              Zcv
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0532251426"
              >
                0532251426
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              sfg@ghxf.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="exjX1IXpB5e1oBIV1Dcmgj9f2nw1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              Lebron
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              James
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0524498853"
              >
                0524498853
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              tt@test.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              לא ידוע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="QoJEdyCYPJSDM4UyMn2W8qOw15j2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              Nir
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              8
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0544116673"
              >
                0544116673
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              nis2est22@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              B-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="C1OHjLa4h5MMImCLiMei2stQkaA3"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              aaa
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              sssd
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0543334442"
              >
                0543334442
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              aa@a.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              AB-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="XkqyI9ETwicD4TzX2qnFF9rBXHP2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              cor1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              hos1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0528444444"
              >
                0528444444
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ni2test8@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="AIKuXNaZqITgyFppQdZGCqrgW7d2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              cor_test
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              zm_test
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0542261158"
              >
                0542261158
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              cor_zm_test@a.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="yMwq3NQBtlaoy2LAerdgBESubM13"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              donor1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              hos1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0528411999"
              >
                0528411999
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ni2st14@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="8doOcKEAvsbNV5RMnzU0Tew9ETo2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              qwer
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ty
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:053113432"
              >
                053113432
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              qwer@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="2AL2kLgUSFhhydNdm0L64N9TEC12"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ra
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ka
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0501234567"
              >
                0501234567
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              miu@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="nS8qDFTA2PaIvZKdVzo51UATtt82"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              tr tester
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              333
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:21112234"
              >
                21112234
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              tr@test.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="lRRqTlFiMnfFNxlsBtNIWs1NXwO2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              shliflaf
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              kazabubu
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:052238307"
              >
                052238307
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              yerek@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="Vx24MkpiF3ZU4um93rbx2KLHTJr2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              טל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ו
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0540000000"
              >
                0540000000
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              wags@dmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              לא ידוע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="hWmpOj8ob6NY2Ju3e8nQr7NrrIw2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              מואב
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              קדימה
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0522222932"
              >
                0522222932
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              dimonder@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              AB+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="QVjvYphIB9Qnigg9crjvuwY7GJ43"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              יגל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              מתלונן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0522222222"
              >
                0522222222
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              y@aaa.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="8qhLCRwD7neqYUG7lHjysUM2D9f1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              יעלוז
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              קובל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0522215049"
              >
                0522215049
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              yarok@wazr.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="nk0F1L0N4dQQlxb3nA6mHn9FZWN2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              נוקדים
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              פרוזן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:050222222"
              >
                050222222
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              rekjavik@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              B+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="lu4EV7gQyEe06RnmjwTZuYuugPA2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              ניר
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              aaa
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0522226654"
              >
                0522226654
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              test@fff.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="oTw5kyXpEmURXzmCA7qFADJB7v72"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              תכשיט
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              מרעום
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0525349798"
              >
                0525349798
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              norad@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="TvmKdvXDnJdHkJ0dnzuz3FaN4zX2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              גם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              תכשיט
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0526402232"
              >
                0526402232
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              rokko@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-27"
            data-donor-id="6oY3xoCbDdT0D9en3TFYiQITszq1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              עשי
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              עדי123
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              <a
                href="tel:0539222226"
              >
                0539222226
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              a323@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-body-34"
            >
              A+
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Search Donors Screen Loading 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              menu.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          חיפוש תורמים
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <table
        className="MuiTable-root-24"
        role={null}
      >
        <thead
          className="MuiTableHead-root-26"
          role={null}
        >
          <tr
            className="MuiTableRow-root-27 MuiTableRow-head-30"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              דוא״ל
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-32 MuiTableCell-head-33 MuiTableCell-alignCenter-40"
              scope="col"
            >
              סוג דם
            </th>
          </tr>
        </thead>
      </table>
      <div
        className="spinner"
      >
        <div
          className="MuiCircularProgress-root-44 MuiCircularProgress-colorPrimary-48 MuiCircularProgress-indeterminate-46"
          role="progressbar"
          style={
            Object {
              "height": "3rem",
              "width": "3rem",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-50"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-51 MuiCircularProgress-circleIndeterminate-53"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
